Implement header/nav/footer from Creatives sources

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
-<div class="container">
-	<h1>Home</h1>
+<div class="hero">
+  <div class="enorme_claim_wrap">
+    <h1 class="the_claim">It's time <br>to <span class="accent">dream</span>.</h1>
+  </div>
 </div>
