Add content from Creatives sources

--- a/index.html
+++ b/index.html
@@ -6,3 +6,257 @@ layout: default
     <h1 class="the_claim">It's time <br>to <span class="accent">dream</span>.</h1>
   </div>
 </div>
+<div class="newsletter_cta">
+  <div class="newsletter_cta_wrap">
+    <div class="w-row">
+      <div class="w-col w-col-6 w-col-stack">
+        <h1 class="h1_newsletter_cta">Subscribe to receive news about <span class="l2020">Lausanne2020!</span></h1>
+      </div>
+      <div class="w-col w-col-6 w-col-stack">
+        <div class="w-form">
+          <form class="newsletter_cta_form" data-name="Email Form" id="email-form" name="email-form">
+            <div class="w-row">
+              <div class="w-col w-col-9 w-col-stack">
+                <input class="newsletter_cta_field w-input" data-name="Email 2" id="email-2" maxlength="256" name="email-2" placeholder="Enter your email address" required="required" type="email">
+              </div>
+              <div class="w-col w-col-3 w-col-stack">
+                <input class="newsletter_cta_btn w-button" data-wait="Please wait..." type="submit" value="Subscribe!">
+              </div>
+            </div>
+          </form>
+          <div class="w-form-done">
+            <div>Thank you! Your submission has been received!</div>
+          </div>
+          <div class="w-form-fail">
+            <div>Oops! Something went wrong while submitting the form</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="about_yog_section">
+  <div class="about_yog_wrap">
+    <div class="w-row">
+      <div class="w-col w-col-4 w-col-stack">
+        <h1 class="h1_about_yog">ABOUT <br>THE YOG</h1>
+      </div>
+      <div class="w-col w-col-8 w-col-stack">
+        <p class="about_the_yog_p">The Youth Olympic Games are an elite sporting event for young people from all over the world. The sports programme is based on that of the Olympic Games, with 28 sports featured on the summer programme and 7 on the winter programme.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="map_section" data-ix="scroll-nav">
+  <div class="map_wrap">
+    <img class="map" sizes="(max-width: 991px) 80vw, 50vw" src="images/map_test.png" srcset="images/map_test-p-500x323.png 500w, images/map_test-p-800x517.png 800w, images/map_test-p-1080x697.png 1080w, images/map_test.png 1130w">
+  </div>
+</div>
+<div class="facts">
+  <div class="facts_wrap">
+    <div class="w-row">
+      <div class="col-facts col-facts_1 w-col w-col-3">
+        <div class="wrap_facts">
+          <h1 class="h1_facts">240</h1>
+          <img class="img_facts" src="images/medal.svg" width="100">
+          <h1 class="h2_facts">Medals</h1>
+        </div>
+      </div>
+      <div class="col-facts w-col w-col-3">
+        <div class="wrap_facts">
+          <h1 class="h1_facts">2365</h1>
+          <img class="img_facts" src="images/basketball-jersey.svg" width="100">
+          <h1 class="h2_facts">Athletes</h1>
+        </div>
+      </div>
+      <div class="col-facts col-facts_1 w-col w-col-3">
+        <div class="wrap_facts">
+          <h1 class="h1_facts">3rd</h1>
+          <img class="img_facts" src="images/shapes.svg" width="100">
+          <h1 class="h2_facts">Winter Games</h1>
+        </div>
+      </div>
+      <div class="col-facts w-col w-col-3">
+        <div class="wrap_facts">
+          <h1 class="h1_facts">206</h1>
+          <img class="img_facts" src="images/earth-globe.svg" width="100">
+          <h1 class="h2_facts">Countries</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="marchandising_section">
+  <div class="marchandising_wrap">
+    <div class="w-row">
+      <div class="marchandising_col_1 w-col w-col-6 w-col-stack">
+        <h1 class="h1_newsletter_cta shop_cta">Discover all the goodies in our marchandising partner shop!</h1>
+        <a class="shop_btn w-button" href="#">Shop!</a>
+      </div>
+      <div class="col_merch w-col w-col-6 w-col-stack">
+        <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 816px) 98vw, (max-width: 991px) 800px, 620px" src="images/lausanne_tshirt.png" srcset="images/lausanne_tshirt-p-500x338.png 500w, images/lausanne_tshirt.png 800w">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="social_feed_section">
+  <div class="social_feed_wrap">
+    <div class="w-row">
+      <div class="w-col w-col-4 w-col-stack">
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+      </div>
+      <div class="w-col w-col-4 w-col-stack">
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+      </div>
+      <div class="w-col w-col-4 w-col-stack">
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+        <div class="social_feed_item">
+          <div class="social_info w-row">
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img class="avatar" src="images/76RMOxmF.jpg">
+            </div>
+            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
+              <h1 class="h1_social_name">Gwladys Epangue</h1>
+              <div class="handle">@GwladysEpangue</div>
+            </div>
+            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
+              <img src="images/twitter-logo-silhouette.svg" width="28">
+            </div>
+          </div>
+          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
+          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="partners_section">
+  <div class="partners_wrap">
+    <img sizes="(max-width: 811px) 100vw, 811px" src="images/lg_logos.png" srcset="images/lg_logos-p-500x178.png 500w, images/lg_logos-p-800x285.png 800w, images/lg_logos.png 811w">
+  </div>
+</div>
