--- a/discover.html
+++ b/discover.html
@@ -9,9 +9,9 @@ layout: default
     <h1 class="h1_bis h1_discover">La suisse</h1>
     <p class="discover_1 discover_p">
       {% if site.lang == "fr" %}
-        {{ site.data.contentful.spaces.example.pageDiscover[0].textDintroduction }}
+        {{ site.data.contentful.spaces.entries.pageDiscover[0].textDintroduction }}
       {% else %}
-        {{ site.data.contentful.spaces.example.pageDiscoverEn[0].textDintroduction }}
+        {{ site.data.contentful.spaces.entries.pageDiscoverEn[0].textDintroduction }}
       {% endif %}
     </p>
     <div class="discover_img w-row">
