--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 layout: default
 ---
 <div class="hero">
-  <div class="enorme_claim_wrap">
+  <div class="enorme_claim_wrap container">
     <h1 class="the_claim">It's time <br>to <span class="accent">dream</span>.</h1>
   </div>
 </div>
 <div class="newsletter_cta">
-  <div class="newsletter_cta_wrap">
-    <div class="w-row">
-      <div class="w-col w-col-6 w-col-stack">
+  <div class="newsletter_cta_wrap container">
+    <div class="row">
+      <div class="col-md-6">
         <h1 class="h1_newsletter_cta">Subscribe to receive news about <span class="l2020">Lausanne2020!</span></h1>
       </div>
-      <div class="w-col w-col-6 w-col-stack">
-        <div class="w-form">
+      <div class="col-md-6">
+        <div class="">
           <form class="newsletter_cta_form" data-name="Email Form" id="email-form" name="email-form">
-            <div class="w-row">
-              <div class="w-col w-col-9 w-col-stack">
+            <div class="row">
+              <div class="col-md-9">
                 <input class="newsletter_cta_field w-input" data-name="Email 2" id="email-2" maxlength="256" name="email-2" placeholder="Enter your email address" required="required" type="email">
               </div>
-              <div class="w-col w-col-3 w-col-stack">
+              <div class="col-md-3">
                 <input class="newsletter_cta_btn w-button" data-wait="Please wait..." type="submit" value="Subscribe!">
               </div>
             </div>
@@ -36,12 +36,12 @@ layout: default
   </div>
 </div>
 <div class="about_yog_section">
-  <div class="about_yog_wrap">
-    <div class="w-row">
-      <div class="w-col w-col-4 w-col-stack">
+  <div class="about_yog_wrap container">
+    <div class="row">
+      <div class="col-md-4">
         <h1 class="h1_about_yog">ABOUT <br>THE YOG</h1>
       </div>
-      <div class="w-col w-col-8 w-col-stack">
+      <div class="col-md-8">
         <p class="about_the_yog_p">The Youth Olympic Games are an elite sporting event for young people from all over the world. The sports programme is based on that of the Olympic Games, with 28 sports featured on the summer programme and 7 on the winter programme.</p>
       </div>
     </div>
@@ -53,30 +53,30 @@ layout: default
   </div>
 </div>
 <div class="facts">
-  <div class="facts_wrap">
-    <div class="w-row">
-      <div class="col-facts col-facts_1 w-col w-col-3">
+  <div class="facts_wrap container">
+    <div class="row">
+      <div class="col-facts col-facts_1 col-md-3">
         <div class="wrap_facts">
           <h1 class="h1_facts">240</h1>
           <img class="img_facts" src="images/medal.svg" width="100">
           <h1 class="h2_facts">Medals</h1>
         </div>
       </div>
-      <div class="col-facts w-col w-col-3">
+      <div class="col-facts col-md-3">
         <div class="wrap_facts">
           <h1 class="h1_facts">2365</h1>
           <img class="img_facts" src="images/basketball-jersey.svg" width="100">
           <h1 class="h2_facts">Athletes</h1>
         </div>
       </div>
-      <div class="col-facts col-facts_1 w-col w-col-3">
+      <div class="col-facts col-facts_1 col-md-3">
         <div class="wrap_facts">
           <h1 class="h1_facts">3rd</h1>
           <img class="img_facts" src="images/shapes.svg" width="100">
           <h1 class="h2_facts">Winter Games</h1>
         </div>
       </div>
-      <div class="col-facts w-col w-col-3">
+      <div class="col-facts col-md-3">
         <div class="wrap_facts">
           <h1 class="h1_facts">206</h1>
           <img class="img_facts" src="images/earth-globe.svg" width="100">
@@ -87,13 +87,13 @@ layout: default
   </div>
 </div>
 <div class="marchandising_section">
-  <div class="marchandising_wrap">
-    <div class="w-row">
-      <div class="marchandising_col_1 w-col w-col-6 w-col-stack">
+  <div class="marchandising_wrap container">
+    <div class="row">
+      <div class="marchandising_col_1 col-md-6">
         <h1 class="h1_newsletter_cta shop_cta">Discover all the goodies in our marchandising partner shop!</h1>
         <a class="shop_btn w-button" href="#">Shop!</a>
       </div>
-      <div class="col_merch w-col w-col-6 w-col-stack">
+      <div class="col-md-6">
         <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 816px) 98vw, (max-width: 991px) 800px, 620px" src="images/lausanne_tshirt.png" srcset="images/lausanne_tshirt-p-500x338.png 500w, images/lausanne_tshirt.png 800w">
       </div>
     </div>
@@ -255,8 +255,45 @@ layout: default
     </div>
   </div>
 </div>
-<div class="partners_section">
-  <div class="partners_wrap">
-    <img sizes="(max-width: 811px) 100vw, 811px" src="images/lg_logos.png" srcset="images/lg_logos-p-500x178.png 500w, images/lg_logos-p-800x285.png 800w, images/lg_logos.png 811w">
+<div class="partners_section container">
+  <div class="partners">
+    <div class="partner">
+      <img src="images/black.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/blue.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/red.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/green.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/red.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/blue.jpg">
+    </div>
+  </div>
+  <div class="partners">
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
+    <div class="partner">
+      <img src="images/cola.jpg">
+    </div>
   </div>
 </div>
