Newsletter form config

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
       </div>
       <div class="col-md-6">
         <div class="">
-          <form class="newsletter_cta_form" data-name="Email Form" id="email-form" name="email-form">
+          <form class="newsletter_cta_form" data-name="Email Form" id="email-form" name="email-form" name="newsletter" action="/" netlify>
             <div class="row">
               <div class="col-md-9">
                 <input class="newsletter_cta_field w-input" data-name="Email 2" id="email-2" maxlength="256" name="email-2" placeholder="Enter your email address" required="required" type="email">
