Newsletter form config

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ layout: default
       </div>
       <div class="col-md-6">
         <div class="">
-          <form class="newsletter_cta_form" data-name="Email Form" id="email-form" name="email-form" name="newsletter" action="/" netlify>
+          <form class="newsletter_cta_form" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="/" netlify>
             <div class="row">
               <div class="col-md-9">
-                <input class="newsletter_cta_field w-input" data-name="Email 2" id="email-2" maxlength="256" name="email-2" placeholder="Enter your email address" required="required" type="email">
+                <input class="newsletter_cta_field w-input" data-name="Email" id="email" maxlength="256" name="email" placeholder="Enter your email address" required="required" type="email">
               </div>
               <div class="col-md-3">
                 <input class="newsletter_cta_btn w-button" data-wait="Please wait..." type="submit" value="Subscribe!">
