--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,9 @@ layout: default
 <div class="latestnews_section">
   <div class="newsletter_cta_wrap">
     <h1 class="h1_big_news h1_newsletter_cta">Contact us</h1>
-    <div class="w-row">
-      <div class="w-col w-col-6 w-col-stack">
-        <div class="w-form">
-          <form class="form" data-name="Email Form" id="email-form" name="email-form">
+    <div class="row">
+      <div class="col-md-6">
+          <form class="form form-contact" data-name="Email Form" id="email-form-contact" name="email-form-contact" action="#" netlify>
             <label class="label" for="Firstname">Firstname:</label>
             <input class="fields w-input" data-name="Firstname" id="Firstname" maxlength="256" name="Firstname" placeholder="Enter your firstname" required="required" type="text">
             <label class="label" for="Lastname">Lastname:</label>
@@ -24,9 +23,8 @@ layout: default
           <div class="error w-form-fail">
             <div>Oops! Something went wrong while submitting the form</div>
           </div>
-        </div>
       </div>
-      <div class="w-col w-col-6 w-col-stack">
+      <div class="col-md-6">
         <img class="img-contact" sizes="(max-width: 991px) 100vw, 620px" src="images/5808c9f5843e554215b96073_lausanne_overview-copy.jpg" srcset="images/5808c9f5843e554215b96073_lausanne_overview-copy-p-500x313.jpeg 500w, images/5808c9f5843e554215b96073_lausanne_overview-copy-p-800x500.jpeg 800w, images/5808c9f5843e554215b96073_lausanne_overview-copy-p-1080x675.jpeg 1080w, images/5808c9f5843e554215b96073_lausanne_overview-copy-p-1600x1000.jpeg 1600w, images/5808c9f5843e554215b96073_lausanne_overview-copy.jpg 1680w" width="100%">
       </div>
     </div>
