Added CSS animation system - added animation to section facts homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="hero">
   <div class="enorme_claim_wrap container">
-    <h1 class="the_claim">It's time <br>to <span class="accent">dream</span>.</h1>
+    <h1 class="the_claim">Lausanne<br/><span class="accent">aux couleurs des jeux</span></h1>
   </div>
 </div>
 <div class="newsletter_cta">
@@ -57,30 +57,30 @@ layout: default
     <div class="row">
       <div class="col-facts col-facts_1 col-md-3">
         <div class="wrap_facts">
-          <h1 class="h1_facts">240</h1>
-          <img class="img_facts" src="images/medal.svg" width="100">
-          <h1 class="h2_facts">Medals</h1>
+          <h1 class="h1_facts" data-ix="fadeindown">240</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" src="images/medal.svg" width="100">
+          <h1 class="h2_facts" data-ix="fadeintop">Medals</h1>
         </div>
       </div>
       <div class="col-facts col-md-3">
         <div class="wrap_facts">
-          <h1 class="h1_facts">2365</h1>
-          <img class="img_facts" src="images/basketball-jersey.svg" width="100">
-          <h1 class="h2_facts">Athletes</h1>
+          <h1 class="h1_facts" data-ix="fadeindown">2365</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" src="images/basketball-jersey.svg" width="100">
+          <h1 class="h2_facts" data-ix="fadeintop">Athletes</h1>
         </div>
       </div>
       <div class="col-facts col-facts_1 col-md-3">
         <div class="wrap_facts">
-          <h1 class="h1_facts">3rd</h1>
-          <img class="img_facts" src="images/shapes.svg" width="100">
-          <h1 class="h2_facts">Winter Games</h1>
+          <h1 class="h1_facts" data-ix="fadeindown">3rd</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" src="images/shapes.svg" width="100">
+          <h1 class="h2_facts" data-ix="fadeintop">Winter Games</h1>
         </div>
       </div>
       <div class="col-facts col-md-3">
         <div class="wrap_facts">
-          <h1 class="h1_facts">206</h1>
-          <img class="img_facts" src="images/earth-globe.svg" width="100">
-          <h1 class="h2_facts">Countries</h1>
+          <h1 class="h1_facts" data-ix="fadeindown">206</h1>
+          <img class="img_facts" data-ix="fadeinscaleup" src="images/earth-globe.svg" width="100">
+          <h1 class="h2_facts" data-ix="fadeintop">Countries</h1>
         </div>
       </div>
     </div>
